--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 <body>
   <div class="container">
     <h1 class="heading">Image Gallery <span>Daido Mariami</span></h1>
+    <div class="Gallery">
+      <div class="Gallery-item">
+        <img class="Gallery-image" src="img/1.jpg">
+      </div>
+    </div>
   </div>
 </body>
 </html>
