добавлены еще 4 фото
+ красивая тень

--- a/index.html
+++ b/index.html
@@ -10,10 +10,34 @@
 <body>
   <div class="container">
     <h1 class="heading">Image Gallery <span>Daido Mariami</span></h1>
-    <div class="Gallery">
-      <div class="Gallery-item">
-        <img class="Gallery-image" src="img/1.jpg">
+    <div class="gallery">
+      <div class="gallery-item">
+        <img class="gallery-image" src="img/1.jpg">
       </div>
+      <div class="container">
+        <h1 class="heading">Image Gallery <span>Daido Mariami</span></h1>
+        <div class="gallery">
+          <div class="gallery-item">
+            <img class="gallery-image" src="img/2.jpg">
+          </div>
+          <div class="container">
+            <h1 class="heading">Image Gallery <span>Daido Mariami</span></h1>
+            <div class="gallery">
+              <div class="gallery-item">
+                <img class="gallery-image" src="img/3.jpg">
+              </div>
+              <div class="container">
+                <h1 class="heading">Image Gallery <span>Daido Mariami</span></h1>
+                <div class="gallery">
+                  <div class="gallery-item">
+                    <img class="gallery-image" src="img/4.jpg">
+                  </div>
+                  <div class="container">
+                    <h1 class="heading">Image Gallery <span>Daido Mariami</span></h1>
+                    <div class="gallery">
+                      <div class="gallery-item">
+                        <img class="gallery-image" src="img/5.jpg">
+                      </div>
     </div>
   </div>
 </body>
