--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
                       <div class="gallery-item">
                         <img class="gallery-image" src="img/5.jpg">
                       </div>
+                      <div class="container">
+                        <h1 class="heading">Image Gallery <span>Daido Mariami</span></h1>
+                        <div class="gallery">
+                          <div class="gallery-item">
+                            <img class="gallery-image" src="img/6.jpg">
+                          </div>
     </div>
   </div>
 </body>
